schema changes as per external data
